# m17-kiss-ht

./: .gitignore  README.md  build.gradle  settings.gradle
codec2talkie/: build.gradle
codec2talkie/src/main/: AndroidManifest.xml
codec2talkie/src/main/java/com/radio/codec2talkie/: Codec2Player.java  Codec2Player.kt  MainActivity.java  MainActivity.kt
codec2talkie/src/main/java/com/radio/codec2talkie/bluetooth/: BluetoothLEConnectActivity.kt  BluetoothLEService.kt
codec2talkie/src/main/java/com/radio/codec2talkie/kiss/: KissProcessor.java
codec2talkie/src/main/java/com/radio/codec2talkie/m17/: CRC16.java  M17Callback.java  M17Processor.java
codec2talkie/src/main/java/com/radio/codec2talkie/usb/: UsbConnectActivity.java  UsbConnectActivity.kt  UsbPortHandler.java
codec2talkie/src/main/res/color/: button_transmit_selector.xml
codec2talkie/src/main/res/drawable/: button_transmit.xml
codec2talkie/src/main/res/layout/: activity_main.xml
codec2talkie/src/main/res/values/: strings.xml
codec2talkie/src/test/java/com/radio/codec2talkie/: CRC16UnitTest.java  M17UnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libcodec2-android/: build.gradle
libcodec2-android/src/codec2/: CMakeLists.txt
libcodec2-android/src/codec2/src/: CMakeLists.txt
m17kissht/: build.gradle
m17kissht/src/main/: AndroidManifest.xml
m17kissht/src/main/java/com/mobilinkd/m17kissht/: AudioService.kt  BuildConfig.java  CRC16UnitTest.java  Codec2Player.kt  ExampleInstrumentedTest.java  M17UnitTest.java  MainActivity.kt  PRBS9.kt
m17kissht/src/main/java/com/mobilinkd/m17kissht/bluetooth/: BluetoothConnectActivity.java  BluetoothLEConnectActivity.kt  BluetoothLEService.kt  SocketHandler.java
m17kissht/src/main/java/com/mobilinkd/m17kissht/kiss/: KissCallback.java  KissProcessor.java
m17kissht/src/main/java/com/mobilinkd/m17kissht/m17/: CRC16.java  M17Callback.java  M17Processor.java  M17Processor.kt
m17kissht/src/main/java/com/mobilinkd/m17kissht/usb/: UsbConnectActivity.kt  UsbConnectService.kt  UsbPortHandler.java  UsbService.kt
m17kissht/src/main/res/color/: button_transmit_selector.xml
m17kissht/src/main/res/drawable/: ic_logo.xml  ic_logo2.xml
m17kissht/src/main/res/layout/: activity_main.xml  activity_usb_connect.xml
m17kissht/src/main/res/values/: preloaded_fonts.xml  strings.xml
m17kissht/src/main/res/xml/: device_filter.xml
m17kissht/src/test/java/com/mobilinkd/m17kissht/: CRC16UnitTest.java  M17UnitTest.java  PRBS9UnitTest.java
